# rust-challenges

./: .gitignore  Cargo.toml  README.md  cargo  flake.nix  rustfmt.toml
benches/: my_benchmark.rs
leetcode/src/: lib.rs
src/: lib.rs
src/aoc/: mod.rs
src/aoc/y2015/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc/y2016/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/aoc/y2017/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/aoc/y2019/: day1.rs
src/aoc/y2023/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
src/aoc/y2024/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
src/aoc/y2025/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/codeforces/: mod.rs  watermelon_a.rs
src/codewars/: mod.rs  move_zeros_to_the_end.rs
src/data_structures/: double_linked_list.rs  linked_list.rs  mod.rs
src/euler/solutions/: mod.rs  p0001_multiples_of_3_and_5.rs  p0002_even_fibonacci_numbers.rs  p0003_largest_prime_factor.rs  p0004_largest_palindrome_product.rs  p0005_smallest_multiple.rs  p0022_digit_cancelling_fractions.rs  p0026_reciprocal_cylcles.rs  p0039_integer_right_triangles.rs  (+2 more)
src/helper/: combinatorics.rs  grid.rs  mod.rs  primes.rs  quickfind.rs  quickunion.rs
(+154 files in other folders)
