[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4"
rand = "0.8.5"
nom = "7"
md5 = "0.7.0" # Advent of Code 2015 day 4
regex = "1.8.4"

[[bench]]
name = "my_benchmark"
harness = false
