[package]
name = "rust-challenges"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.7"
rand = "0.8.5"
nom = "7"
md5 = "0.7.0" # Advent of Code 2015 day 4
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.99"
lazy_static = "1.4.0"
itertools = "0.13.0"
range-set = "0.1.0"
googletest = "0.14.2"
num = "0.4.3"

# [[bench]]
# name = "bench_two_sum"
# harness = false

[[bin]]
name = "flyio-1"
path = "src/flyio/chapter1/echo.rs"

[[bin]]
name = "cf-watermelon"
path = "src/codeforces/watermelon_a.rs"
